[package]
name = "miopen-sys"
version = "0.0.1"
authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
edition = "2018"
links = "MIOpen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.72"

[build-dependencies]
bindgen = { version = "0.54.1", optional = true }
